--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -117,6 +117,7 @@
             const frame = this.jsFrame.getWindowByName(this.frameName);
             if (this.isVisible) frame.control.doDehide({});
             else frame.control.doHide({});
+            localStorage.setItem('chatbot_visible', this.isVisible);
         }
     }
 </script>
@@ -135,9 +136,10 @@
         window.ChatUI = new ChatUI();
         window.ChatUI.buildChatButton();
         window.ChatUI.buildChatWindow();
-    }
 
-    window.addEventListener('load', () => addAIChatBot());
+        const visible = localStorage.getItem('chatbot_visible') === 'true';
+        if (visible) window.ChatUI.toggleChatVisibility();
+    }
 
     let prev_url = '';
     new MutationObserver(function (mutations) {
